--- a/custom_components/volkswagen_we_connect_id/manifest.json
+++ b/custom_components/volkswagen_we_connect_id/manifest.json
@@ -3,7 +3,7 @@
   "name": "Volkswagen We Connect ID",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/volkswagen_we_connect_id",
-  "requirements": ["git+https://github.com/daernsinstantfortress/WeConnect-python.git@main#weconnect==WeConnect-python", "ascii_magic==1.6"],
+  "requirements": ["weconnect @ git+https://github.com/tillsteinbach/WeConnect-python.git@main", "ascii_magic==1.6"],
   "ssdp": [],
   "zeroconf": [],
   "homekit": {},
